# evtivity-iot-panel

./: .gitignore  README.md
docs/: BUILD.md  FLASHING.md
firmware/: lv_conf.h
firmware/EVtivityPanel/: EVtivityPanel.ino  api_client.cpp  api_client.h  config.h  logo_img.c  logo_img.h  lvgl_port.h  model.h  net.cpp  net.h  rgb_lcd_port.h  settings_store.cpp  settings_store.h  ui.cpp  ui.h
firmware/EVtivityPanel/scripts/: screenshot.py
sim/: CMakeLists.txt  README.md  lv_conf.h  main.c  screens.c  screens.h
sim/assets/: logo32.c  logo96.c
